# Mr.-Paji

./: .gitignore  README.md  bot.py  main.py  pyproject.toml  requirements.txt  setup.sh
configuration/: config.py
logs/: README.md
utils/: emojis.py  logger.py
